<resources>
    <string name="app_name">FashionStore</string>
    <string name="client_id">227033495773-e5k6t8ktb8m0vaauu6v8p43k6r1u7gh8.apps.googleusercontent.com</string>
    <string name="login_title">Welcome Back!</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="go_to_register">Don\'t have an account? Register</string>

    <string name="register_title">Create Your Account</string>
    <string name="fullname_hint">Full name</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="register_button">Register</string>
    <string name="go_to_login">Already have an account? Login</string>

    <string name="forgot_password_title">Forgot Password</string>
    <string name="send_reset_button">Send Reset Email</string>
    <string name="back_to_login">Back to Login</string>

</resources>